# visual_debugger

./: .gitignore  CMakeLists.txt  LICENSE.TXT  README.md
data/: force_working_directory.cpp
demo/: CMakeLists.txt  main.cpp
demo/amalg/: CMakeLists.txt
demo/data/: force_working_directory.cpp
demo/developer/: CMakeLists.txt  README.md
demo/developer/scripts/: bootstrap.sh
demo/developer/scripts/windows/: cmake.bat
include/: debug-api.h
source/: CMakeLists.txt  debug-api.cpp  debug-api.hpp  imgui_main.cpp  io-broadcast.hpp  io-redirect.hpp  main.cpp  system.cpp  treedump.cpp  utils.h  varmap.cpp
source/amalg/: amalg.cpp
src/: debug-api.cpp  halide-image-io.cpp  halide-image-io.h  imgui_main.cpp  io-broadcast.hpp  io-redirect.hpp  system.cpp  system.hpp  treedump.cpp  utils.h
src/amalg/: amalg-c.c  amalg-cpp.cpp  amalg-m.m  amalg.c  amalg.cpp  amalg.m
